# explorer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Procfile  README.md  bugs_and_issues.md  compose.yml  env  figwidget_bug.ipynb  figwidget_bug.py  mkdocs.yml  presentation_todo.md  pyproject.toml  re_export.py  run.sh  run_production.sh  slbug2.py  test.ipynb  test.py  todo.md
.github/workflows/: docker.yml  docs.yml
bokehsolara/: app.py  bokeh_loaded.vue  demo.py  demo2.py  editor.py  figurebokeh.py  grid.py  gridlayout_toolbar.vue  help.py  log.txt  objectgrid.py  plot_actions.py  plot_effects.py  plot_settings.py  plot_themes.py  plot_utils.py  plots.py  slbug.py  state.py  test.ipynb  textfield.py  util.py  zach.py
bokehsolara/.ipynb_checkpoints/: test-checkpoint.ipynb
bokehsolara/.jukit/: zach_outhist.json
docs/: about.md  guides.md  index.md  license.md  on_valis.md
docs/developer/: codebase.md  config.md  datafiles.md  guardrailing.md  index.md  plots.md  state.md
docs/examples/: crossmatch.md  flags.md  hr.md  yso.md
docs/guide/: cartons.md  codebase.md  crossmatch.md  datafiles.md  download.md  guardrailing.md  layout.md  plotting.md  subsets.md  vc.md
docs/reference/: dataclass.md
docs/user/: crossmatch.md
downloadAPI/: clients.py  hello.py  pyproject.toml  run.sh
downloadAPI/explorer_server/: __init__.py  api.py  config.py  dataframe.py  filter.py  logging.py  models.py  utils.py
logbook/: logbook.fdb_latexmk  logbook.fls  logbook.tex
meetings/: 2023-11-09.md  2023-11-29.md  2024-03-21.md  astra_jan4.md  dv_2023-01-30.md  notes_for_next_meeting.md
presentation/: thing.xopp
reports/: bibliography.bib  pres_graph.py  w5.bcf  w5.blg  w5.run.xml  w5.tex
reports/final/: aas_macros.sty  final.aux  final.bbl  final.bcf  final.blg  final.fdb_latexmk  final.fls  final.out  final.run.xml  final.tex
reports/w5/: w5.aux  w5.bbl  w5.bib  w5.fdb_latexmk  w5.fls
reports/w9/: bibliography.bib  w9.aux  w9.bbl  w9.bcf  w9.blg  w9.fdb_latexmk  w9.fls  w9.out  w9.run.xml  w9.tex
scripts/: gen_datamodel_ref.py  gen_reference_pages.py
sdss_explorer/: __init__.py  filter_functions.py
sdss_explorer/dashboard/: __init__.py
sdss_explorer/pages/: __init__.py  auth.py  dataframe.py  dialog.py  editor.py  glossary.py  grid.py  plot_settings.py  plots.py  sidebar.py  state.py  subset_options.py  subsets.py  util.py
sdss_explorer/server/: __init__.py  api.py  config.py  dataframe.py  filter.py  logging.py  test_api.py  wsgi.py
sdss_explorer/vue/: datatable.vue  gridlayout_toolbar.vue
src/sdss_explorer/: __init__.py  filter_functions.py
tests/: impl_test.ipynb  jdaviz_issue.ipynb  jdaviz_issue.py
visboard/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  dataframe.py  editor.py  grid.py  main.py  mast.py  plot_settings.py  plots.py  run.sh  run_production.sh  scatter.py  scatter_card_test.py  scatter_demo.py  sidebar.py  slbug.py  solara_on_fastapi.py  state.py  test_dataframe_components.py  test_vaex_jupyter.py  testinhtiehtehiethn.ipynb  todo.md
(+108 files in other folders)
